--- a/xuecheng-plus-parent/pom.xml
+++ b/xuecheng-plus-parent/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>../xuecheng-plus-base</module>
+        <module>../xuecheng-plus-content</module>
     </modules>
     <name>xuecheng-plus-parent</name>
     <description>xuecheng-plus-parent</description>
