--- a/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
@@ -1,16 +1,54 @@
-server:
-  servlet:
-    context-path: /content
-  port: 63040
+# 注释配置放nacos上了
+#server:
+#  servlet:
+#    context-path: /content
+#  port: 63040
 #微服务配置
+
 spring:
   application:
-    name: content-api
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://42.194.194.60:3306/xuecheng-content?serverTimezone=UTC&userUnicode=true&useSSL=false
-    username: root
-    password: 
+    name: content-api #服务名content-api-dev.yaml
+  cloud:
+    nacos:
+      server-addr: localhost:8848
+      discovery: #服务注册相关配置
+        namespace: online-study-dev
+        group: xuecheng-plus-project
+      config: #配置文件相关配置
+        namespace: online-study-dev
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+#        extension-configs:
+#          - data-id: content-service-${spring.profiles.active}.yaml
+#            group: xuecheng-plus-project
+#            refresh: true
+        shared-configs:
+          - data-id: swagger-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+          - data-id: logging-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+
+  profiles:
+    active: dev   #环境名
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://xxxxx:3306/xuecheng_content?serverTimezone=UTC&useUnicode=true&useSSL=false&characterEncoding=utf8
+#    username: root
+#    password:
 # 日志文件配置路径
-logging:
-  config: classpath:log4j2-dev.xml
+#logging:
+#  config: classpath:log4j2-dev.xml
+#配置mapper xml文件的路径
+
+
+
+#swagger:
+#  title: "学成在线内容管理系统"
+#  description: "内容系统管理系统对课程相关信息进行管理"
+#  base-package: com.miao.content
+#  enabled: true
+#  version: 1.0.0
