--- a/xuecheng-plus-parent/pom.xml
+++ b/xuecheng-plus-parent/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>../xuecheng-plus-base</module>
         <module>../xuecheng-plus-content</module>
+        <module>../xuecheng-plus-gateway</module>
     </modules>
     <name>xuecheng-plus-parent</name>
     <description>xuecheng-plus-parent</description>
