--- a/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
@@ -30,6 +30,10 @@ spring:
           - data-id: logging-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: freemarker-config-dev.yaml
+            group: xuecheng-plus-common
+            refresh: true
+
 
   profiles:
     active: dev   #环境名
