新增课程发布相关sdk，修复多模块找不到包的bug，完善了部分课程发布功能

--- a/xuecheng-plus-content/xuecheng-plus-api/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-api/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>xuecheng-plus-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.xuecheng</groupId>
+            <artifactId>xuecheng-plus-message-sdk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--cloud的基础环境包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
