--- a/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-api/src/main/resources/bootstrap.yml
@@ -33,10 +33,26 @@ spring:
           - data-id: freemarker-config-dev.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: feign-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
 
 
   profiles:
     active: dev   #环境名
+
+xxl:
+  job:
+    admin:
+      addresses: http://localhost:8080/xxl-job-admin
+    executor:
+      appname: coursePublish
+      address:
+      ip:
+      port: 8999
+      logpath: /data/applogs/xxl-job/jobhandler
+      logretentiondays: 30
+    accessToken: default_token
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
